--- a/cppMatrizEsparsa.cbp
+++ b/cppMatrizEsparsa.cbp
@@ -32,6 +32,7 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="Linha.h" />
 		<Unit filename="Lista.cpp" />
 		<Unit filename="Lista.h" />
 		<Unit filename="MatrizEsparsa.cpp" />
